--- a/react-demo/src/App.css
+++ b/react-demo/src/App.css
@@ -1,10 +1,15 @@
 :root{
+   /*Colores*/
   --color-green:#A9B59D;
   --color-red:#DD723A;
   --color-orange: #FDAC39;
   --color-purple:#95BAF3;
   --color-bottom: #F8F1E8;
   --color-black:#000000;
+
+  /*Typography*/
+
+  --font-family:
 
 
 }
@@ -13,9 +18,11 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu {
+  text-align: right; 
+  margin: 24px;
+  color: var(--color-black);
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -39,11 +46,5 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
