--- a/react-demo/src/Components/Header.css
+++ b/react-demo/src/Components/Header.css
@@ -19,6 +19,10 @@
              right: 0px;
              z-index: -1;
         }
+        .container__title{
+            display: flex;
+            flex-direction:column ;
+        }
 
         .header__title{
             font-size: 30px;
