add components Button
Install styled components

--- a/react-demo/src/components/Card.css
+++ b/react-demo/src/components/Card.css
@@ -24,5 +24,11 @@
             }
 
 @media all and (min-width: 600px){
+.card-home{
+    display:flex;
+}
+    .about{
+        height: 600px;
+    }
 
 }
