navbar burger menu

--- a/react-demo/src/page/Home.css
+++ b/react-demo/src/page/Home.css
@@ -20,7 +20,7 @@
     }
 
 .quest__container {
-    /* background-color: var(--color-home); */
+    background-color: var(--color-home);
     
 }
     .quest__buttons{
