add component skills
add components skills in the front page

--- a/react-demo/src/App.css
+++ b/react-demo/src/App.css
@@ -1,7 +1,6 @@
 :root{
    /*Colores*/
-  --color-grafic:#A9B59D;
-  --color-ux:#DD723A;
+  
   --color-home: #FDAC39;
   --color-front:#95BAF3;
   --color-bg: #F8F1E8;
@@ -17,6 +16,7 @@
 
 .App {
   text-align: center;
+  background-color: var(--color-bg);
   
 }
   .name{
