--- a/react-demo/src/Components/Header.css
+++ b/react-demo/src/Components/Header.css
@@ -11,7 +11,7 @@
     }
         .header__container::before{
              content: "";
-             background-color: var(--color-grafic);
+             background-color: var(--color-header,#A9B59D);
              position: absolute;  
              top: 0px;
              left: 0px;
@@ -19,7 +19,7 @@
              right: 0px;
              z-index: -1;
         }
-        .container__title{
+        .header__container-title{
             display: flex;
             flex-direction:column ;
         }
