--- a/react-demo/src/index.css
+++ b/react-demo/src/index.css
@@ -1,5 +1,8 @@
+html{
+  max-width: 100%;
+  overflow-x: hidden;
+}
 body {
-  
   margin:0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,4 +19,5 @@ code {
   body {
     margin:5%;
   }
+  
 }
