--- a/react-demo/src/page/Front/Front.css
+++ b/react-demo/src/page/Front/Front.css
@@ -7,24 +7,35 @@
     display:flex;
     flex-direction: column;
     font-size: 24px;
+    text-align: left;
+    margin:48px 60px;
 }
 .skills__section-description{
     margin:48px 60px;
     font-size: 14px;
     text-align: left;
+    
 }
 
- @media all and (min-width: 600px){
-    .skills__front{
-        display: flex;
-        justify-content: end;
-    }
 
+@media all and (min-width: 650px){
+    
     .skills__section{
         display: grid;
-        grid-template-columns: 1fr 1fr; 
+        grid-template-columns: repeat(2, 1fr);
         grid-gap: -6vw;
     
     }
         
- }
+        
+}
+@media all and (min-width: 1000px){
+    .skills__front{
+        display: flex;
+        justify-content: end;
+    }
+        .skills__section-description{
+            width: 20vw;
+        }
+
+}
