--- a/react-demo/src/App.css
+++ b/react-demo/src/App.css
@@ -19,22 +19,30 @@
 
 .App {
   text-align: center;
-  background-color: var(--color-bg);
+  /* background-color: var(--color-bg); */
   
   
   
 }
   .name{
     text-align: left;
-    color: var(--color-bg);
+    
     margin: 20px;
+    
   }
 
   .menu {
     color: var(--color-typography);
 
   }
-
+@media all and (min-width:700px){
+  .name{
+    writing-mode: vertical-rl;
+    position: fixed;
+    left: 0;
+    top:40vh;
+  }
+}
 
 
 
