--- a/react-demo/src/page/Home.css
+++ b/react-demo/src/page/Home.css
@@ -1,20 +1,30 @@
 
 .beginning {
-    background-color: var(--color-home);
-    height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     justify-items: center;
-}
+} 
+        .beginning::after{
+            content:'';
+            background-color: var(--color-home);
+            width: 100%;
+            height: 5em;
+            justify-content: end;
+            
+           
+        }
+
     .title__beginning {
         text-align: left;
         font-size: 60px;
         display:flex;
         align-items: center;
         justify-content: center;
-        
+    
     }
+
+        
     .gif{
         width: 90px;
     }
