--- a/react-demo/src/components/Card/Card.css
+++ b/react-demo/src/components/Card/Card.css
@@ -2,7 +2,7 @@
     margin:48px;
 }
     .img__section {
-        height: 267px;
+        height: 70vw;
     }
     .container__title{
        display: flex;
