--- a/react-demo/src/components/Headboard/Headboard.css
+++ b/react-demo/src/components/Headboard/Headboard.css
@@ -5,25 +5,34 @@
     align-items: center;
     justify-content: center;
     justify-items: center;
+    height: 667px;
 } 
         .headboard::after{
             content:'';
             background-color: var(--color-home);
+            position:absolute;
+            top:60%;
+            bottom: 0;
             width: 100%;
-            height: 5em;
+            /* width: 100%;
+            height: 5em; */
             justify-content: end;
+            z-index: -1;
         }
-
-    .title__headboard {
-        text-align: left;
-        font-size: 60px;
-        display:flex;
-        align-items: center;
-        justify-content: center;
     
-    }
 
-        
-    .gif{
-        width: 90px;
-    }
+        .first-title {
+            text-align: left;
+            font-size: 60px;
+            display:flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0;
+            
+        }
+        .gif{
+            width: 90px;
+            position:absolute;
+            bottom:26%;
+            right: 25vw;
+        }
