--- a/react-demo/src/components/Headboard/Headboard.css
+++ b/react-demo/src/components/Headboard/Headboard.css
@@ -13,7 +13,9 @@
             position:absolute;
             top:60%;
             bottom: 0;
-            width: 100%;
+            left:0;
+            right: 0;
+            margin: 0 5%;
             /* width: 100%;
             height: 5em; */
             justify-content: end;
@@ -36,3 +38,16 @@
             bottom:26%;
             right: 25vw;
         }
+
+    @media all and (min-width:700px){
+        .headboard::after{
+            position:absolute;
+            top:0;
+            bottom: 0;
+            left:0;
+            right: 50%;
+            margin: 5% 5%;
+        }
+    
+
+    }
