create new component
component Quest
add new component in the home page

--- a/react-demo/src/components/Card/Card.css
+++ b/react-demo/src/components/Card/Card.css
@@ -29,11 +29,19 @@
         }
 
 @media all and (min-width: 950px) {
-.card-home{
+/* .card-home{
     display:flex;
-}
+    
+} */
     .img__section {
         height: 600px;
     }
+    .digital{
 
+        justify-content: center;
+    }
+   .about{
+       display: flex;
+       flex-direction: row-reverse;
+   }
 }
