--- a/react-demo/src/App.css
+++ b/react-demo/src/App.css
@@ -1,3 +1,4 @@
+    /*VARIABLES*/
 :root{
    /*Colores*/
   
@@ -7,24 +8,47 @@
   --color-typography:#000000;
   --color-margin: #FFFFFF;
 
-  /*Typography*/
 
-
-
-  /* Border buttons*/
+  /* Buttons*/
   --stroke: 3px solid;
   --stroke-radius: 50px;
+  /*mb*/
+  --size-mb-button:18px;
+  /*dk*/
+  --size-dk-button:24px;
 
 }
+/* text-align text*/
+.left{
+  text-align: left;  
+}
+
+/* Typography-size*/
+h1{
+  font-size: 38px;
+  
+} 
+h2{
+  font-size: 24px;
+  
+}
+h3{
+  font-size: 18px;
+}
+p{
+  font-size: 14px;
+}
+
+
+
 
 .App {
   text-align: center;
   /* background-color: var(--color-bg); */
   overflow: hidden;
-  
-  
-  
+ 
 }
+
   .name{
     text-align: left;
     
@@ -37,6 +61,19 @@
 
   }
 @media all and (min-width:700px){
+  h1{
+    font-size: 48px;
+    
+  } 
+  h2{
+    font-size: 38px;
+  }
+  h3{
+    font-size: 24px;
+  }
+  p{
+    font-size: 18px;
+  }
   .name{
     writing-mode: vertical-rl;
     position: fixed;
