--- a/react-demo/src/index.css
+++ b/react-demo/src/index.css
@@ -1,24 +1,52 @@
-*, ::after,::before {
-  box-sizing: border-box;
-}
 
+
+@font-face {
+  src:
+    url('../public/fonts/CenturyGothic.ttf');
+      
+      font-family: 'CenturyGothic';
+      font-style: normal;
+      font-weight: 600;
+}
+@font-face {
+  src:
+    url('../public/fonts/CenturyGothic-Bold.ttf');
+          
+      font-family: 'CenturyGothic';
+      font-style: bold;
+      font-weight: 800;
+      
+}    
+
+
+*, ::after,::before {
+     box-sizing: border-box;
+     margin:0;
+     padding:0;
+    
+
+     
+}
 html{
   max-width: 100%;
   overflow-x: hidden;
+
 }
 body {
   margin:0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:'CenturyGothic','Roboto', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+    
+
 }
+
+
 @media all and (min-width: 700px) {
   body {
     margin:5%;
