--- a/react-demo/src/page/Home.css
+++ b/react-demo/src/page/Home.css
@@ -1,18 +1,74 @@
-
-
-
-
-.card__title{
-    text-align: center;
-
+.home{
+  margin:20vw;  
 }
-    .title-section {
-        display: block;
+.card__container{
+    margin: 10em 0;
+}
+    .img__section {
+        height: 70vw;
+    }
+    
+   
+   
+
+
+    .card-title{
+        text-align: center;
+        padding:30px ;
         
     }
+        .title-section {
+            display: block;  
+        }
 
+    .card-description{
+        margin-bottom: 30px;
+    }
 
+        .button-contact{
+            cursor: pointer;
+            position: relative;
+            display: inline-block;
+            padding: 12px 24px;
+            border: var(--stroke) var(--color-home);
+            border-radius: var(--stroke-radius);
+            font-weight: bold;
+            overflow: hidden;
+            color:var(--color-home);
+            background-color: transparent;
+            text-decoration: none;
+            
+          
+            }
+                .button-contact:hover{
+                    color:var(--color-bg);
+                }
+        
+                .button-contact::before, .button-contact::after{
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: 100%;
+                    width: 100%;
+                    transition: all 0.25s ease;
+                    border-radius: 50px;
+                }
+                    .button-contact::before{
+                        border-radius: var(--stroke-radius);
+                        margin-left: -100%;
+                        box-shadow: inset 0 0 0 20px var(--color-home);
+                        z-index:-1; 
+                    }
+                    
+                    .button-contact:hover::before{
+                        margin-left: 0; 
+                    }
+/*---------------------------- BREAK------------------------------*/
 @media all and (min-width:850px){
+    /* .home{
+        max-width: 500px;
+    } */
     .quest__buttons{
         flex-direction: row;
         
