--- a/react-demo/src/page/Home.css
+++ b/react-demo/src/page/Home.css
@@ -2,10 +2,11 @@
   margin:20vw;  
 }
 .card__container{
-    margin: 10em 0;
+    margin: 20em 0;
 }
     .img__section {
         height: 70vw;
+      
     }
     
    
@@ -66,19 +67,45 @@
                     }
 /*---------------------------- BREAK------------------------------*/
 @media all and (min-width:850px){
-    /* .home{
-        max-width: 500px;
-    } */
-    .quest__buttons{
-        flex-direction: row;
+    .home{
+        margin:0 auto;
         
     }
-    .card__title{
-        text-align: left;
-    }
-
-    .img__section{
+    .row-desktop{
         display:flex;
-
+        max-width: 1200px;
+        margin:0 auto;
+        justify-content: space-between;
+        padding:15em 0;
+        
     }
+        .about{
+            flex-direction: row-reverse;
+            align-items: flex-end;
+        }
+        .digital{
+            margin-bottom: 24px;
+        }
+        .img__section{
+            display:flex;
+            height: 600px;
+        }
+        .digital-design{
+           margin:0 auto;
+        }
+        .card-text{
+            max-width: 360px;
+       
+        }
+            .card-title{
+                text-align: left;
+              
+            }
+            .card-description{
+                padding: 30px ;
+            }
+        
+
+        
+
 }
