--- a/react-demo/src/page/Home.css
+++ b/react-demo/src/page/Home.css
@@ -1,6 +1,4 @@
-.home{
-  margin:20vw;  
-}
+
 .card__container{
     margin: 20em 0;
 }
@@ -23,7 +21,7 @@
         }
 
     .card-description{
-        margin-bottom: 30px;
+        margin: 2em 5em;
     }
 
         .button-contact{
@@ -103,6 +101,7 @@
             }
             .card-description{
                 padding: 30px ;
+                margin: 0;
             }
         
 
