--- a/react-demo/src/App.css
+++ b/react-demo/src/App.css
@@ -51,20 +51,7 @@ a{
   overflow: hidden;
  
 }
-.frame-top{
-  background-color: var(--color-margin);
-  position:fixed;
-  top:0;
-  width: 100%;
-  z-index:4;
 
-}
-.frame-bottom{
-  background-color: var(--color-margin);
-  position:fixed;
-  bottom:0;
-  width: 100%;
-}
   .name{
     text-align: left;
     
@@ -76,6 +63,10 @@ a{
     color: var(--color-typography);
 
   }
+
+
+
+  /*-----------------------------BREAK----------------------------*/
 @media all and (min-width:700px){
   h1{
     font-size: 48px;
@@ -95,6 +86,24 @@ a{
     position: fixed;
     left: 0;
     top:40vh;
+  }
+
+
+  .frame-top{
+    background-color: var(--color-margin);
+    position:fixed;
+    top:0;
+    width: 100%;
+    z-index:4;
+  
+  }
+  .frame-bottom{
+    background-color: var(--color-margin);
+    position:fixed;
+    bottom:0;
+    width: 100%;
+    height: 80px;
+    z-index:4;
   }
 }
 
