--- a/react-demo/src/page/Home.css
+++ b/react-demo/src/page/Home.css
@@ -6,10 +6,13 @@
         height: 70vw;
       
     }
-    
-   
-   
-
+    .bg-img {
+        background-image: url(../img/fondoWireframe.png) ;
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+        
+    }
 
     .card-title{
         text-align: center;
@@ -56,7 +59,7 @@
                     .button-contact::before{
                         border-radius: var(--stroke-radius);
                         margin-left: -100%;
-                        box-shadow: inset 0 0 0 20px var(--color-home);
+                        box-shadow: inset 0 0 0 40px var(--color-home);
                         z-index:-1; 
                     }
                     
@@ -77,12 +80,16 @@
         padding:15em 0;
         
     }
+    .bg-img{
+        height: 44vh;
+    }
         .about{
             flex-direction: row-reverse;
             align-items: flex-end;
         }
         .digital{
-            margin-bottom: 24px;
+            padding-bottom: 24px;
+            margin:0 auto;
         }
         .img__section{
             display:flex;
