--- a/react-demo/src/components/Footer/Footer.css
+++ b/react-demo/src/components/Footer/Footer.css
@@ -1,6 +1,7 @@
 .footer {
     background-color: var(--color-margin);
-    margin-top: 60px;
+    padding: 84px 0;
+    
     
 }
     .footer__logo {
@@ -9,10 +10,11 @@
     .footer__title {
      
         font-size:24px;
-        margin-bottom: 48px;
+        margin: 48px;
     }
         .title--top{
             display:block;
+            
         } 
     .contact {
         margin-bottom: 84px;
@@ -27,7 +29,7 @@
     .footer{
         display:flex;
         justify-content: space-around;
-       
+        
 
     }
 
