--- a/react-demo/src/App.css
+++ b/react-demo/src/App.css
@@ -17,10 +17,18 @@
   /*dk*/
   --size-dk-button:24px;
 
+  /*z-index*/
+  --bottom: -1;
+  --bottom-medium:1;
+  --medium: 2;
+  --top-medium:4;
+  --top:5;
+
 }
 /* text-align text*/
 .left{
-  text-align: left;  
+  text-align: left;
+  z-index:var(--bottom-medium);  
 }
 
 /* Typography-size*/
@@ -42,7 +50,9 @@ p{
 a{
   color:var(--color-typography)
 }
-
+img{
+  z-index: var(--bottom-medium);
+}
 
 
 .App {
@@ -93,7 +103,7 @@ a{
     position:fixed;
     top:0;
     width: 100%;
-    z-index:4;
+    z-index:var(--top-medium);
   
   }
   .frame-bottom{
@@ -102,7 +112,7 @@ a{
     bottom:0;
     width: 100%;
     height: 80px;
-    z-index:4;
+    z-index:var(--top-medium);
   }
 }
 
