--- a/react-demo/src/page/Home.css
+++ b/react-demo/src/page/Home.css
@@ -60,7 +60,7 @@
                         border-radius: var(--stroke-radius);
                         margin-left: -100%;
                         box-shadow: inset 0 0 0 40px var(--color-home);
-                        z-index:-1; 
+                        z-index:var(--bottom); 
                     }
                     
                     .button-contact:hover::before{
