--- a/react-demo/src/components/Header/Header.css
+++ b/react-demo/src/components/Header/Header.css
@@ -13,7 +13,18 @@
              left: 0px;
              bottom:70vh;
              right: 0px;
+             /* animation: slide-bottom 3.0s linear ;
+             animation-fill-mode: forwards; */
+            
         }
+        /* @keyframes slide-bottom {
+            0% {
+              height: 0;
+            }
+            100% {
+              height: 100%;
+            }
+          } */
     
         .header__image{
             height: 13vh;
