style grid page grafic

--- a/react-demo/src/App.css
+++ b/react-demo/src/App.css
@@ -1,7 +1,7 @@
     /*VARIABLES*/
 :root{
    /*Colores*/
-  
+  --color-grafic:#A9B59D;
   --color-home: #FDAC39;
   --color-front:#95BAF3;
   --color-bg: #F8F1E8;
