--- a/react-demo/src/components/Header/Header.css
+++ b/react-demo/src/components/Header/Header.css
@@ -13,18 +13,18 @@
              left: 0px;
              bottom:70vh;
              right: 0px;
-             /* animation: slide-bottom 3.0s linear ;
-             animation-fill-mode: forwards; */
+             /* animation: slide-bottom 3.0s ease-out ; */
+        
             
         }
         /* @keyframes slide-bottom {
             0% {
-              height: 0;
+              top: 0;
             }
             100% {
-              height: 100%;
+              top: 70vh;
             }
-          } */
+          }  */
     
         .header__image{
             height: 13vh;
@@ -46,4 +46,14 @@
                     margin: 0 80px;
                     bottom: 50vh;
                 }
+        
+            .header__description{
+                margin:102px 25vw;        
+            }
+        
+        
         }
+
+
+
+
