--- a/react-demo/src/page/Front.css
+++ b/react-demo/src/page/Front.css
@@ -18,6 +18,20 @@
     text-align: left;
     
 }
+.front__container-projects{
+    margin:0 auto;
+}
+
+.front-img-project{
+    width: 330px;
+    margin-top:136px ;
+    margin-bottom:48px ;
+}
+
+.container-buttons-front{
+    margin-bottom: 48px;
+}
+   
 /*-----------------------IMG Project----------------------*/
 
 
@@ -29,17 +43,27 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: -6vw;
-    }     
+    } 
+    .front-img-project{
+        width: 600px;
+    }
+    
 }
+
 
 /*--------------------- BREAK----------------------*/
 @media all and (min-width: 1000px){
-    .skills__front{
-        display: flex;
-        justify-content: end;
+    .front-img-project{
+        width:900px;
     }
-        .skills__section-description{
-            width: 20vw;
-        }
+
+    .skills__section-description{
+        width: 20vw;  
+    }
+    .skills__section{
+        grid-template-columns: repeat(3, 1fr);
+        max-width: 900px;
+        margin:0 auto;
+    }   
 
 }
