--- a/react-demo/src/components/Headboard/Headboard.css
+++ b/react-demo/src/components/Headboard/Headboard.css
@@ -39,16 +39,22 @@
             white-space: nowrap;
             display:block;
             margin: 0;
-            position:absolute;
-            width:6ch;
-
-            animation: typing 5s steps(6);
+            animation: tracking-in-expand 1.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
             overflow: hidden;
            
         }
-        @keyframes typing{
-            from {width:0;}
-        }
+        @keyframes tracking-in-expand {
+            0% {
+              letter-spacing: -0.5em;
+              opacity: 0;
+            }
+            40% {
+              opacity: 0.6;
+            }
+            100% {
+              opacity: 1;
+            }
+          }
  
         
         .gif {
