--- a/react-demo/src/components/Headboard/Headboard.css
+++ b/react-demo/src/components/Headboard/Headboard.css
@@ -3,45 +3,17 @@
 
 .headboard {
     display: flex;
-    align-items: center;
     justify-content: center;
-    justify-items: center;
     
 } 
-        /* .headboard::before{
-            content:''; 
-             background-color: var(--color-home);
-            position:absolute;
-            top:0;
-            bottom:0 ;
-            left:0;
-            right: 0;
-            justify-content: end;
-            animation: slide-bottom 3.0s ease-out ;
-            animation-fill-mode: forwards;
-          
-        }
-        @keyframes slide-bottom {
-            0% {
-              transform: translateY(0);
-            }
-            100% {
-              transform: translateY(60%);
-            }
-        } */
-     
-        
-    
-
         .first-title {
-            text-align: left;
             font-size: 60px;
-            white-space: nowrap;
             display:block;
-            margin: 0;
             animation: tracking-in-expand 1.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
             overflow: hidden;
-           
+            position:absolute;
+            bottom:40vh;
+            right: 30vw;
         }
         @keyframes tracking-in-expand {
             0% {
@@ -60,32 +32,17 @@
         .gif {
             width: 90px;
             position:absolute;
-            bottom:26%;
+            bottom:38vh;
             right: 25vw;
         }
-
-    @media all and (min-width:700px) {
-         .headboard::before{
-            position:absolute;
-            top:0;
-            bottom: 0;
-            left:0;
-            right: 38vw;
-            margin:80px;
-            animation: slide-right 2.0s ease-in-out;
-        }
-
-        @keyframes slide-right {
-            0% {
-              width: 100%;
+        @media all and (min-width:700px) {
+            .first-title {
+                bottom:45vh;
+                right: 40vw;
             }
-            100% {
-              width:50%;
+            .gif {
+                bottom:43.5vh;
+                right: 38.5vw;
             }
-        }      
-            
-            
-            
-            
-    }
-       
+
+        }   
