style Projects page for desktop
fix vertical name
fix Begin scroll open Project page

--- a/react-demo/src/App.css
+++ b/react-demo/src/App.css
@@ -92,6 +92,7 @@ img{
   }
   .name{
     writing-mode: vertical-rl;
+    transform: rotate(180deg);
     position: fixed;
     left: 0;
     top:40vh;
