--- a/react-demo/src/page/Home.css
+++ b/react-demo/src/page/Home.css
@@ -1,7 +1,7 @@
  
  /*baground animation begin*/
  
-.wrapper-begin{
+/* .wrapper-begin{
     height:300px;
     width:100%;
 }  
@@ -30,7 +30,7 @@
                     bottom:54vh ;      
                 }
             
-            } 
+            }  */
     
     
 
