--- a/react-demo/src/components/AnimationHome/AnimationHome.css
+++ b/react-demo/src/components/AnimationHome/AnimationHome.css
@@ -1,4 +1,4 @@
-    
+ 
 .bg-animation{
     height: 100vh;
     width:100%;
@@ -43,7 +43,7 @@
         position: absolute;  
             top: 0px;
             left: 0px;
-            bottom:50vh;
+            bottom:0;
             right: 0px;
         
         animation: bg-cover 2.5s ease-out forwards;
