--- a/react-demo/src/components/CardProject/CardProject.css
+++ b/react-demo/src/components/CardProject/CardProject.css
@@ -6,3 +6,26 @@
 .text-card{
     margin:1.5rem 2rem;
 }
+
+@media all and (min-width:850px){
+    .container-img-card{
+        display:flex;
+        justify-content: center;
+
+    }
+
+        .img-card{
+            width: 40vw;
+            margin: 6rem 0;
+            
+        }
+        .grap{
+            padding-left: 1rem;
+        }
+    .text-card{
+        width: 40vw;
+        margin:0 auto;
+        padding-bottom: 1rem;
+    }
+}
+
