--- a/react-demo/src/components/Headboard/Headboard.css
+++ b/react-demo/src/components/Headboard/Headboard.css
@@ -10,6 +10,7 @@
             font-size: 60px;
             display:block;
             animation: tracking-in-expand 1.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+            animation-delay: 1s;
             overflow: hidden;
             position:absolute;
             bottom:40vh;
@@ -34,7 +35,22 @@
             position:absolute;
             bottom:38vh;
             right: 25vw;
+            animation: stain 0.5s ease-out forwards;
+            animation-delay: 2s;
+            opacity: 0;
+            
         }
+        @keyframes stain {
+          0% {
+            opacity: 0;
+          }
+          
+          100% {
+            opacity: 100%;
+          }
+        }
+
+
         @media all and (min-width:700px) {
             .first-title {
                 bottom:45vh;
