fix header background project page

--- a/react-demo/src/page/Home.css
+++ b/react-demo/src/page/Home.css
@@ -100,7 +100,7 @@
         max-width: 1200px;
         margin:0 auto;
         justify-content: space-between;
-        padding:15em 0;
+        padding:10rem 0;
         
     }
     .bg-img{
