--- a/react-demo/src/components/CardProject/CardProject.css
+++ b/react-demo/src/components/CardProject/CardProject.css
@@ -8,6 +8,10 @@
 }
 
 @media all and (min-width:850px){
+    .container-card{
+        max-width: 1200px;
+        margin:0 auto;
+    }
     .container-img-card{
         display:flex;
         justify-content: center;
