--- a/react-demo/src/components/Headboard/Headboard.css
+++ b/react-demo/src/components/Headboard/Headboard.css
@@ -4,17 +4,16 @@
 .headboard {
     display: flex;
     justify-content: center;
+    position: relative;
     
 } 
         .first-title {
             font-size: 60px;
+            font-weight: 800;
             display:block;
             animation: tracking-in-expand 1.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
             animation-delay: 1s;
-            overflow: hidden;
-            position:absolute;
-            bottom:40vh;
-            right: 30vw;
+              
         }
         @keyframes tracking-in-expand {
             0% {
@@ -32,9 +31,9 @@
         
         .gif {
             width: 90px;
-            position:absolute;
-            bottom:38vh;
-            right: 25vw;
+            position: absolute;
+              top:65px;
+              left:75px;
             animation: stain 0.5s ease-out forwards;
             animation-delay: 2s;
             opacity: 0;
