--- a/react-demo/src/components/AnimationHome/AnimationHome.css
+++ b/react-demo/src/components/AnimationHome/AnimationHome.css
@@ -1,23 +1,26 @@
  
 .bg-animation{
-    height: 100vh;
+    height: 100%;
     width:100%;
     align-items: center;
     justify-content: center;
     display:flex;
+    
 }
     .bg-animation::before {
         content: "";
         background-color: var(--color-home);
-        position: absolute;  
-             top: 0px;
-             left: 0px;
-             bottom:50vh;
-             right: 0px;
+        position: absolute; 
+            top:-100px;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        
+        height: 100%;
 
-        animation: animation-begin 2.5s ease-out forwards;
+        /* animation: animation-begin 2.5s ease-out forwards; */
     }
-        @keyframes animation-begin {
+        /* @keyframes animation-begin {
                 
             0% {
                 top:0;
@@ -26,7 +29,7 @@
             100% {
                 bottom:50vh ;      
             }
-        } 
+        }  */
 
 
 
@@ -45,7 +48,8 @@
             left: 0px;
             bottom:0;
             right: 0px;
-        
+            height: 100%;
+   
         animation: bg-cover 1s ease-out forwards;
     }
         @keyframes bg-cover{
@@ -67,10 +71,9 @@
 
     @media all and (min-width:700px) {
         .bg-animation::before{
-            margin:80px;
                 bottom: 0;
                 right:38vw;
-              
+                margin:60px;
             animation: slide-right 2.5s ease-out ;
         }
             @keyframes slide-right {
@@ -84,7 +87,7 @@
             
             
         .bg-animation-start::before{
-            margin:80px;
+            margin:60px;
                 bottom: 0;
                 right:38vw;
             animation: bg-cover-right 2.5s ease-out forwards ;
