--- a/react-demo/src/index.css
+++ b/react-demo/src/index.css
@@ -30,11 +30,10 @@
 html{
   max-width: 100%;
   overflow-x:hidden;
-  /* height: 100%; */
+  background-color: var(--color-bg);
 }
 body {
   margin:0;
-  background-color: var(--color-bg);
   height: 100%;
   font-family:'CenturyGothic','Roboto', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -52,8 +51,17 @@ code {
 
 @media all and (min-width: 700px) {
   html {
-    margin:80px;
-    background-color: var(--color-margin);
+    margin:0 60px; 
+  }
+  
+  
+  
+}
+
+@media all and (min-width: 1000px) {
+  html {
+    margin:0 80px;
+    
   }
   
 }
