--- a/react-demo/src/page/Grafic.css
+++ b/react-demo/src/page/Grafic.css
@@ -6,11 +6,12 @@
     
 }
 .grid-container {
-    margin-top: 48px;
+    margin: 48px 0;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 1em;
-    margin: 0 1em;
+    max-width: 1800px;
+   
 }
   
 
@@ -64,7 +65,8 @@
 @media all and (min-width:600px){ 
   .grid-container {
     grid-template-columns: repeat(2, 1fr);
-    margin:0;
+   
+    
   }
    /*for touch screen devices */
    
