--- a/react-demo/src/page/Home.css
+++ b/react-demo/src/page/Home.css
@@ -1,42 +1,9 @@
  
- /*baground animation begin*/
- 
-/* .wrapper-begin{
-    height:300px;
-    width:100%;
-}  
-    .wrapper-begin::before{
-            content: "";
-            margin: 0 80px;
-            background-color: var(--color-home);
-            position: absolute;  
-                    top: 0px;
-                    left: 0px;
-                    bottom:54vh;
-                    right: 0px;
-
-            animation: animation-begin 3.0s ease-out forwards;
-    }
-    
-
-            @keyframes animation-begin {
-                
-                0% {
-                    top:0;
-                    bottom:100%
-                            
-                }
-                100% {
-                    bottom:54vh ;      
-                }
-            
-            }  */
-    
-    
+  
 
 /*-----------------------cards---------------------*/
 .card__container{
-    margin: 20em 0;
+    margin: 10rem 0;
     
 }
     .img__section {
@@ -47,6 +14,7 @@
         background-image: url(../img/fondoWireframe.png) ;
         background-repeat: no-repeat;
         background-size: cover;
+     
         
         
     }
@@ -65,32 +33,15 @@
     }
 
        
-/*---------------------------- BREAK ANIMATION------------------------------*/
-/* @media all and (min-width:700px) {
-    .headboard::before{
-        position:absolute;
-        top:0;
-        bottom: 0;
-        left:0;
-        right: 38vw;
-        margin:80px;
-        animation: slide-right 1.0s linear ;
-    }
 
-    @keyframes slide-right {
-        0% {
-          width: 100%;
-        }
-        100% {
-          width:50%;
-        }
-    }    
-} */
 
 
 /*----------------BREAK--------------------*/
 
 @media all and (min-width:850px){
+    .card__container{
+        margin: 15rem 0;
+    }    
     .home{
         margin:0 auto;
         
